--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "nodemon": "^3.1.0",
     "react-router-dom": "^6.22.3",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
