--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "author": "ashraf, elizabeth, yoonjoo, kobe, jennifer",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
     "js-cookie": "^3.0.5",
     "mongoose": "^8.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "style-loader": "^3.3.4"
+    "style-loader": "^3.3.4",
+    "@reduxjs/toolkit": "^2.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
