--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.0.5",
