--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
