--- a/package.json
+++ b/package.json
@@ -12,20 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
-    "@reduxjs/toolkit": "^2.1.0",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
     "gridfs-stream": "^1.1.1",
     "js-cookie": "^3.0.5",
+    "method-override": "^3.0.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.0",
     "multer-gridfs-storage": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.0.5",
-    "style-loader": "^3.3.4"
     "redux": "^4.0.5",
     "style-loader": "^3.3.4"
   },
