--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "ashraf, elizabeth, yoonjoo, kobe, jennifer",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "css-loader": "^6.10.0",
     "dotenv": "^16.4.5",
